# multi_robot_pack

./: .gitignore  README.md  dependencies.sh
hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
jackal/jackal_control/config/: robot_localization.yaml
jackal/jackal_control/launch/: control.launch
jackal/jackal_description/launch/: description.launch
jackal/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
jackal/jackal_description/urdf/accessories/: hokuyo_ust10.urdf.xacro  sick_lms1xx_mount.urdf.xacro
jackal/jackal_simulator/jackal_gazebo/launch/: jackal_sim.launch
multihusky_simulator/multihusky_gazebo/launch/: spawn_multihusky.launch
multirobot_examples/: CMakeLists.txt  package.xml
multirobot_examples/launch/: tf_experiments.launch
multirobot_examples/worlds/: slam_world.world  tf_world.world
warthog/warthog/warthog_description/launch/: description.launch
warthog/warthog/warthog_description/urdf/: warthog.gazebo  warthog.urdf.xacro
warthog/warthog_simulator/warthog_gazebo/launch/: warthog_sim.launch  warthog_world.launch
warthog/warthog_simulator/warthog_gazebo/src/: warthog_suspension_plugin.cpp
